[gd_scene load_steps=31 format=1]

[ext_resource path="res://Sprites/UI/metalPanel_redCorner.png" type="Texture" id=1]
[ext_resource path="res://Scripts/SeleccionadorPersonajes.gd" type="Script" id=2]
[ext_resource path="res://Sprites/UI/PNG/barHorizontal_green_left.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/PNG/barHorizontal_green_right.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/PNG/glassPanel_tab.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Mavic.png" type="Texture" id=6]
[ext_resource path="res://Sounds/gaston_energia.wav" type="Sample" id=7]
[ext_resource path="res://Sounds/gaston_vectorial.wav" type="Sample" id=8]
[ext_resource path="res://Sounds/indi_acercate.wav" type="Sample" id=9]
[ext_resource path="res://Sounds/indi_gravedad.wav" type="Sample" id=10]
[ext_resource path="res://Sounds/nico_saltar.wav" type="Sample" id=11]
[ext_resource path="res://Sounds/nico_triple.wav" type="Sample" id=12]
[ext_resource path="res://Sounds/perro_pichi.wav" type="Sample" id=13]
[ext_resource path="res://Sounds/perro_wofwof.wav" type="Sample" id=14]
[ext_resource path="res://Sounds/rage_escudo.wav" type="Sample" id=15]
[ext_resource path="res://Sounds/rage_torre.wav" type="Sample" id=16]
[ext_resource path="res://Sounds/twain_hora.wav" type="Sample" id=17]
[ext_resource path="res://Sounds/twain_senior.wav" type="Sample" id=18]
[ext_resource path="res://Sprites/UI/kenvector_future.ttf" type="DynamicFontData" id=19]
[ext_resource path="res://Escenas/DetallesPoderes.tscn" type="PackedScene" id=20]

[sub_resource type="StyleBoxTexture" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 1 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 3 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 3 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 3 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=5]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 4 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=6]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 4 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=7]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 4 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=8]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 5 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="SampleLibrary" id=10]

samples/gaston_energia = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 7 )
}
samples/gaston_vectorial = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 8 )
}
samples/indi_acercate = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 9 )
}
samples/indi_gravedad = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 10 )
}
samples/nico_saltar = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 11 )
}
samples/nico_triple = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 12 )
}
samples/perro_pichi = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 13 )
}
samples/perro_wofwof = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 14 )
}
samples/rage_escudo = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 15 )
}
samples/rage_torre = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 16 )
}
samples/twain_hora = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 17 )
}
samples/twain_senior = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 18 )
}

[sub_resource type="DynamicFont" id=9]

font/size = 10
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 19 )

[node name="SeleccionadorPersonajes" type="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 334.0
margin/bottom = 347.0
custom_styles/panel = SubResource( 1 )
script/script = ExtResource( 2 )

[node name="Izquierda" type="Button" parent="."]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -11.0
margin/top = 130.0
margin/right = -1.0
margin/bottom = 150.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "<"
flat = false

[node name="Derecha" type="Button" parent="."]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 325.0
margin/top = 130.0
margin/right = 335.0
margin/bottom = 150.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0.996094, 0.996094, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = ">"
flat = false

[node name="PanelDetalles" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 200.0
margin/right = 313.0
margin/bottom = 310.0
custom_styles/panel = SubResource( 8 )

[node name="RichTextLabel" type="RichTextLabel" parent="PanelDetalles"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 20.0
margin/right = 200.0
margin/bottom = 100.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0

[node name="Imagen" type="Sprite" parent="."]

transform/pos = Vector2( 120, 120 )
texture = ExtResource( 6 )

[node name="SamplePlayer" type="SamplePlayer2D" parent="."]

transform/pos = Vector2( 118.583, 115.243 )
params/volume_db = 10.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 10 )
config/pitch_random = 0.0

[node name="Nombre" type="Label" parent="."]

rect/scale = Vector2( 1.2, 1.2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 11.0
margin/top = 17.0
margin/right = 62.0
margin/bottom = 29.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Nombre"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="DetallesPoderes" parent="." instance=ExtResource( 20 )]

margin/left = 49.0
margin/top = 308.0
margin/right = 239.0
margin/bottom = 348.0

[connection signal="pressed" from="Izquierda" to="." method="_on_Izquierda_pressed"]

[connection signal="pressed" from="Derecha" to="." method="_on_Derecha_pressed"]


